2.3/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80

          volumeMounts:
            - name: web-volume
              mountPath: /usr/share/nginx/html

        - name: multitool
          image: praqma/network-multitool
          command: ["sleep", "3600"]

      volumes:
        - name: web-volume
          configMap:
            name: web-content
